--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,18 +1,19 @@
 @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 300;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('/assets/fonts/Inter_24pt-Light.ttf') format('truetype');
+  src: url('/assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Noto Sans';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 100 900;
   font-display: swap;
-  src: url('/assets/fonts/Inter_18pt-Medium.ttf') format('truetype');
+  src: url('/assets/fonts/NotoSans-VariableFont_wdth,wght.ttf') format('truetype');
 }
 :root {
-  --font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
+  --font-family: 'Noto Sans', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
   --font-family-heading: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
 }
+
