Refactor code structure for improved readability and maintainability

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -37,6 +37,9 @@
 .sidebar {
   color: rgba(0,0,0,1) !important;
 }
+.sidebar-bg {
+  background-color: #d6dce5 !important;
+}
 @media (prefers-color-scheme: light) {
   body {
     background-color: #edf1f5;
