--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -26,6 +26,9 @@
   --font-weight: 400;
   --font-weight-heading: 300;
 }
+.sidebar-bg {
+  background-color: #edf1f5 !important;
+}
 .sidebar-bg::after {
   /* background: none !important; */
   background: linear-gradient(to bottom, rgba(0,0,0,0.05), rgba(0,0,0,0.15)) !important;
@@ -34,15 +37,5 @@
   font-family: 'Bitcount', monospace;
   font-weight: 500;
 }
-.sidebar {
-  color: rgba(0,0,0,1) !important;
-}
-.sidebar-bg {
-  background-color: #d6dce5 !important;
-}
-@media (prefers-color-scheme: light) {
-  body {
-    background-color: #edf1f5;
-  }
-}
+
 </style>
