--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -17,3 +17,16 @@
   --font-family-heading: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
 }
 
+blockquote {
+  margin-top: 0 !important;
+}
+
+.mobile-only {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-only {
+    display: block;
+  }
+}
+
