--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -39,3 +39,6 @@
 }
 
 </style>
+{% if site.mermaid %}
+<script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+{% endif %}
